2012-01-31  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed some more issues with (E)AC3 being
	misdtected as AVC elementary streams.

2012-01-27  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: The header editor was sometimes creating two
	instances of an element if an element was added to the second or
	one of the later tracks. Fix for bug 711.

	* mkvpropedit, mmg: bug fix: Trying to modify a file located in a
	path mounted with GVFS SFTP will no longer crash the
	programs. Instead an error message is output if an error
	occurs. Fix for bug 710.

2012-01-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed integer underflows in the read caching
	code resulting in invalid memory access. Happened in broken or
	incomplete files only. Fix for bug 709.

2012-01-23  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Appending AVI, Matroska or MPEG program
	stream files with DTS audio tracks will not result in a warning
	that the appended DTS tracks might not be compatible. Fix for bug
	705.

2012-01-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix for the "timecodes_v2" mode: mkvextract will
	write one more timecode than there are frames in the file. The
	last timecode written will be the the sum of the last frame's
	timecode and duration with the "last frame" being the one with the
	highest timecode. Fix for bug 691.

2012-01-12  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed writing into paths on which a drive is
	mounted on Windows. Fix for bug 701.

	* mkvmerge: enhancement: Identification output for Matroska files:
	Added the track number header field as "number" to the verbose
	identification mode.

2012-01-09  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Identification output for Matroska files:
	Added a field "content_encoding_algorithms" that contains a
	comma-separated list of encoding algorithm IDs used for that