@@ -49,7 +49,7 @@ T_051ogm:1cbafa3de11fbfd22468bf758a7a312b:passed:20071223-112225:0.33698395
 T_200mp2_from_mp4:8b30f207d2fb452af907455884e6b693:passed:20040917-185156:0.144898384
 T_201avc_from_mp4_with_par:371f6e2399e00db520601d9452096b13:passed:20050125-224528:0.10947371
 T_202avc_from_mp4_with_par_bframes:b96c1b84bff8474273fb5d5c54d36c3a:passed:20050125-224635:0.149068649
-T_203wavpack_with_correctiondata:1aa3f44f45e42ab6b7952bb36e341f4f:passed:20050201-094411:0.041437418
+T_203wavpack_with_correctiondata:a67f587c9ddc48348ea57a0bcf7f2e1b:passed:20050201-094411:0.041437418
 T_204wavpack_without_correctiondata:7c8b3f4e0566786ab5ab70899157ed64:passed:20050201-094414:0.035798417
 T_205X_cuesheets:3b00b00c7d185137e30d7e95e3123d33-b3bb67d316e20da12926d5c1d628f6e5:passed:20050210-211853:0.276682618
 T_206X_vobsub:93c40bd212b1165b14b03d00148fecab-f0b88ab55ffda1f9cc447a784829bcba-2c2cb8dd42f5c15e64bc0f62ba2234b4-39e6f66ff3e0287735c4a577487de878-d2ec993d4a6186e032afeff8df7373dd:passed:20050211-231728:0.162895256
@@ -178,3 +178,4 @@ T_329X_timecodes_v2:dadc36ce79c1c4b281f8f1f865746598-049cdc2d9226fac8c61d193d803
 T_330dts_detection:38c941b579418e6c874950f4c55f84ce:passed:20120107-210130:1.22781858
 T_331read_buffer_underflow:3bdec07b9e45cafe2c35561e7f8ad2db:passed:20120125-232902:0.407400904
 T_332eac3_misdetected_as_avc:b4e0ac5954dbf57e4ad941f01c7de462:passed:20120131-145550:0.452730804
+T_333wavpack_with_correction:c561a04a67042b048f7059a80d1c366d-e33897409384ca5fd8ed5e497f8c3883+37f802510b43b2ab4bd7d8356a7ac606-ok:passed:20120131-164845:0.299865433
