@@ -1,5 +1,11 @@
 2012-01-31  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: bug fix: Blocks with "BlockAdditions" will no longer
+	be muxed as "SimpleBlock" elements discarding the additions but
+	instead as "BlockGroup" elements. This applies to e.g. WAVPACK4
+	tracks with correction files as the correction data is stored in
+	"BlockAdditions". Fix for bug 713.
+
 	* mkvmerge: bug fix: Fixed some more issues with (E)AC3 being
 	misdtected as AVC elementary streams.
 
